<resources>
    <string name="app_name">GomwxGenerator</string>
    <string name="what_season_is_it">What is the current season?</string>
    <string name="upper_pattern">What most resembles current 500mb pattern?</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="map_title">500mb</string>
</resources>
